--- a/vignettes/promises_08_casestudy.Rmd
+++ b/vignettes/promises_08_casestudy.Rmd
@@ -60,7 +60,7 @@ The "Detail View" has perhaps the most illuminating information. It lets you vie
 
 Others behave very differently, like `freezing_tapir`, who downloaded `devtools`--and _only_ `devtools`--for the whole day, racking up 19,180 downloads totalling 7.9 gigabytes for that one package alone!
 
-!["Detail View" showing how `freezing_tapir` only downloads devtools continuously all day long.](case-study-tab5.png)
+!["Detail View" showing how `freezing_tapir` only downloads `{devtools}` continuously all day long.](case-study-tab5.png)
 
 Sadly, the app can't tell us any more than that--it can't explain _why_ these downloaders are behaving this way, nor can it tell us their street addresses so that we can send ninjas in black RStudio helicopters to make them stop.
 
@@ -583,13 +583,13 @@ We can make our code significantly faster by doing more summarizing, aggregation
 
 Compare all three runs in the image below (the newly optimized version is labelled "async2"). The homepage load times have dropped further, and the calculation times are now dramatically faster than the sync code.
 
-![Faster response times using asynch served static assets](case-study-gantt-async2.png)
+![Faster response times using async served static assets](case-study-gantt-async2.png)
 
 Looking at the "async2" graph, the leading (bottom-left) edge has the same shape as before, as that's simply the rate at which the load testing tool launches new sessions. But notice how much more closely the trailing (upper-right) edge matches the leading edge! It means that even as the number of active sessions ramped up, the amount of latency didn't get dramatically worse, unlike with the "sync" and "async" versions. And each of the individual blue rectangles in the "async2" are comparatively tiny, meaning that users never have to wait more than a dozen seconds at the most for plots to update.
 
 This last plot shows the same data as above, but with the sessions aligned by start time. You can clearly see how the sessions are both shorter and less variable in "async2" compared to the others. I've added a yellow vertical line at the 10 second mark; if the page load (red/pink) has not completed at this point, it's likely that your visitor has left in disgust. While "async" does better than "sync", they both break through the 10 second mark early and often. In contrast, the "async2" version just barely peeks over the line three times.
 
-![Gantt chart aligned by start time displaying async2 is much better.](case-study-gantt-aligned.png)
+![Session timing aligned by start time displaying async2 is much better.](case-study-gantt-aligned.png)
 
 To get a visceral sense for what it feels like to use the app under load, here's a video that shows what it's like to browse the app while the load test is running at its peak. The left side of the screen shows "sync", the right shows "async2". In both cases, I navigated to the app when session #40 was started.
 
