--- a/vignettes/promises_06_shiny.Rmd
+++ b/vignettes/promises_06_shiny.Rmd
@@ -8,13 +8,13 @@ vignette: >
 ---
 
 ```{css echo=FALSE}
-.alert-success a, .alert-success a:visited {
+.alert-secondary a, .alert-secondary a:visited {
   color: inherit;
   text-decoration: underline;
 }
 ```
 
-<div class="alert alert-success">
+<div class="alert alert-secondary">
 As of Shiny 1.8.1, there is a new feature called **Extended Tasks** that has several advantages over the approach in this article. We highly recommend that you read [the Extended Task documentation](https://shiny.posit.co/r/articles/improve/nonblocking/) first.
 </div>
 
