Use mirai in vignettes

--- a/vignettes/promises_03_overview.Rmd
+++ b/vignettes/promises_03_overview.Rmd
@@ -54,10 +54,10 @@ So if a regular, synchronous function call generally looks like this:
 value <- read.csv("http://example.com/data/data.csv")
 ```
 
-An asynchronous function call (which uses [the future package](promises_04_futures.html) via [`future_promise()`](promises_05_future_promise.html)) will look instead like:
+An asynchronous function call (which uses [the mirai package](promises_04__mirai.html)) will look instead like:
 
 ```r
-promise <- future_promise(read.csv("http://example.com/data/data.csv"))
+promise <- as.promise(mirai(read.csv("http://example.com/data/data.csv")))
 ```
 
 While the regular function call returns a data frame, the async call returns a promise, which is most definitely not a data frame. You cannot ask the promise how many rows it has, or the names of its columns. You cannot run dplyr operations on it, or turn it into a data.table.
@@ -261,7 +261,7 @@ So the equivalent to this (synchronous) code:
 
 ```r
 value <- tryCatch(
-  operation(),
+  pkg::operation(),
   error = function(err) {
     warning("An error occurred: ", err)
     warning("Using default value of 0 instead")
@@ -273,7 +273,7 @@ value <- tryCatch(
 would be this, when the operation is performed asynchronously:
 
 ```r
-promise <- future_promise(operation()) %>%
+promise <- mirai(pkg::operation()) %>%
   then(onRejected = function(err) {
     warning("An error occurred: ", err)
     warning("Using default value of 0 instead")
@@ -302,21 +302,21 @@ Well, `then` has its own default version of `onRejected`. It’s *not* an empty 
 The same syntactic sugar that is offered for non-error cases, is available for error handling code as well. You can use formulas in `onRejected`:
 
 ```r
-future_promise(operation()) %>%
+mirai(pkg::operation()) %>%
   then(onRejected = ~warning(.))
 ```
 
 There’s an error handling pipe operator `%...!%`, that works similar to `%...>%` but it binds to `then(onRejected)` instead of `then(onFulfilled)`:
 
 ```r
-future_promise(operation()) %...!%
+mirai(pkg::operation()) %...!%
   warning()
 ```
 
 There’s also a `catch()` function that is just a shorthand for `then(onRejected)`. It saves a little typing, but more importantly, is easier to read:
 
 ```r
-future_promise(operation()) %>%
+mirai(pkg::operation()) %>%
   catch(warning)
 ```
 
@@ -352,12 +352,15 @@ In synchronous programming, you use either`tryCatch(expr, finally = ...)` or `on
 ```r
 file_path <- tempfile(fileext = ".png")
 png_bytes <-
-  future_promise({
-    png(file_path)
-    plot(cars)
-    dev.off()
-    file_path
-  }) %...>%
+  as.promise(mirai(
+    {
+      png(file_path)
+      plot(cars)
+      dev.off()
+      file_path
+    },
+    file_path = file_path
+  )) %...>%
   readBin(raw(), size = file.info(file_path)$size) %>%
   finally(~unlink(file_path))
 ```
@@ -365,5 +368,5 @@ png_bytes <-
 In this example, we need a temp file for the duration of the pipeline. Our `finally` makes sure the temp file is deleted when the operation is done, regardless of whether it succeeded or failed.
 
 <div style="font-size: 20px; margin-top: 40px; text-align: right;">
-Next: [Launching tasks](promises_04_futures.html)
+Next: [Launching tasks](promises_04__mirai.html)
 </div>
