--- a/vignettes/promises_02_intro.Rmd
+++ b/vignettes/promises_02_intro.Rmd
@@ -60,7 +60,7 @@ read.csv.async <- function(file, header = TRUE, stringsAsFactors = FALSE) {
 }
 ```
 
-(Don't worry about what this definition means for now. You'll learn more about defining async functions in [Launching tasks](promises_04__mirai.html).)
+(Don't worry about what this definition means for now. You'll learn more about defining async functions in [Launching tasks](promises_04_mirai.html).)
 
 **So instead of “read this CSV file” it’s more like “begin reading this CSV
 file”?**
@@ -318,7 +318,7 @@ with some additional functions for working with promises.
 
 So far, the only actual async function we’ve talked about has been
 `read.csv.async`, which doesn’t actually exist. To learn where actual async
-functions come from, read this guide to the [`mirai` package](promises_04__mirai.html).
+functions come from, read this guide to the [`mirai` package](promises_04_mirai.html).
 
 There are the lower-level functions `then`, `catch`, and `finally`, which are
 the non-pipe, non-operator equivalents of the promise operators we’ve been
